- New weapon designed by ijon tichy has been implemented; the Chroma Storm, a rainbow herald of pure dakka!
- Being chilled now reduces your jump height as well.
- Charging up for Boost Ball now gives you a 2x weakness to everything, due to diverting energy to motion rather than shields.
- The center bolt of the Spazer is slightly more powerful than the outer bolts.
- Samus now recoils back slightly on being hit, like in Metroid.
- For those who aren't sure what's happening in the chaos of PvP, metroid_cl_hitindicator has been added. On activation, whenever you put an opponent in the pain state, they will give you a visual and audio indicator of your hit.

BUGFIXES:
- Player death no longer freezes the life bar.
- Items should no longer become invisible when metroid_dropstay is on.
- Charging up the beams while Time Freeze is active no longer causes a massive amount of frozen trails.
- Put DoomEd numbers on all relevant actors, as per mapper request.
- The Speed Booster script no longer overflows with copious respawning.
- The Ice Combo now checks for ten missiles instead of five.
- The Bomb ammo regeneration has been changed to be work via ACS rather than Decorate, which means that Spread should no longer give infinite bombs and Time Freeze should no longer stop bombs.
- MaxArmorBonus and MaxHealthBonus now no longer appear.
- Floatbob removed from items to keep them from floating into space.

POLISH:
- Implemented changelog. Neat.
- The Morph Ball now has a pretty GLDef, thanks to President People.
- 15/30/100 Energy now have different pickup sprites.
- ACLO E sprite has been replaced with NOPE A.
- Rephrased a few lines in the difficulty settings for more clarification.
- By modder request, the HUD is now based upon whether or not you have PowerBeamAcquired in your inventory.
- Dying now properly lowers your arm cannon on death.
- GLDefs have been included.
- Slightly fewer smoke puffs on the Doom Cannon.