@@ -46,3 +46,4 @@ POLISH:
 - Dying now properly lowers your arm cannon on death.
 - GLDefs have been included.
 - Slightly fewer smoke puffs on the Doom Cannon.
+- The Chasecam system has been entirely redone from the ground up to be ACS-based rather than consolecommand based, which not only allows it to be used in ZDoom but also fixes the "exit level while morphed" glitch.
